# ChangeLog for net-p2p/giftcurs
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/giftcurs/ChangeLog,v 1.22 2004/01/07 01:24:38 spider Exp $

*giftcurs-0.6.1-r1 (07 Jan 2004)

  07 Jan 2004; <spider@gentoo.org> giftcurs-0.5.5.ebuild,
  giftcurs-0.5.6.ebuild, giftcurs-0.5.7.ebuild, giftcurs-0.6.0.ebuild,
  giftcurs-0.6.1-r1.ebuild, giftcurs-0.6.1.ebuild, metadata.xml:
  added an RDEPEND for gift, removed stale packages and marked this one as
  stable. Fixed Copyright years

*giftcurs-0.6.1 (31 Aug 2003)

  31 Aug 2003; <spider@gentoo.org> giftcurs-0.6.1.ebuild:
  Versionbump

*giftcurs-0.6.0 (10 Jul 2003)

  10 Jul 2003; <spider@gentoo.org> giftcurs-0.6.0.ebuild:
  Versionbump, moved to savannah, glib2 dependency now.

*giftcurs-0.5.7 (05 May 2003)

  05 May 2003; Jon Portnoy <avenj@gentoo.org> giftcurs-0.5.7.ebuild :
  Version bump.

  21 May 2003; Jon Portnoy <avenj@gentoo.org> giftcurs-0.5.7.ebuild :
  Removed dependency on giFT, since giFTcurs can be used remotely
  and doesn't necessarily need giFT.

*giftcurs-0.5.6 (03 March 2003)

  03 March 2003; Jon Portnoy <avenj@gentoo.org> giftcurs-0.5.6.ebuild :
  Version bump, latest giFTcurs.

  14 Jan 2002; Jon Nall <nall@gentoo.org> giftcurs-0.5.5.ebuild :
  added ~ppc

  15 Dec 2002; Bart Verwilst <verwilst@gentoo.org> : changed ~sparc to sparc

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 

*giftcurs-0.5.5 (30 Nov 2002)

  30 Nov 2002; Spider <spider@gentoo.org> giftcurs-0.5.5.ebuild :
  After a very impolite letter from "Josh Guilfoyle <jasta@gotlinux.org>" about
  me not updating the package in four days after its release, requesting that 
  I immidately remove it from Gentoo, I had a chat with weinholt, who actually 
  handles the releases. package is updated, all should be ok.
   
  
*giftcurs-0.5.4 (12 Nov 2002)
  12 Nov 2002; L. Boshell <leonardop@gentoo.org> : Version bump.
