@@ -1,8 +1,10 @@
 MD5 6bf505422de923ef4cf46cf156001b5f ChangeLog 3175
 MD5 b23a52341ff0a3a811b71a56d99f7801 giftcurs-0.5.5.ebuild 923
-MD5 28d0a01830d9d8e04a79ed3a064b308e giftcurs-0.6.1-r1.ebuild 991
+MD5 7b262cca1d700b859c49c8a84b9095e0 giftcurs-0.6.2.ebuild 973
 MD5 fd060970487e767f30415af7a60c073c giftcurs-0.5.7.ebuild 902
+MD5 28d0a01830d9d8e04a79ed3a064b308e giftcurs-0.6.1-r1.ebuild 991
 MD5 bae2132282fda88ad02b9ea336f144ce metadata.xml 347
 MD5 65d1c4165bbbd98ccf61599379fc0514 files/digest-giftcurs-0.5.5 66
-MD5 f44a2c30bba152c13caeb74787a75baf files/digest-giftcurs-0.5.7 66
 MD5 eb46efccd73d4b93e31728db3c43c4a1 files/digest-giftcurs-0.6.1-r1 66
+MD5 f44a2c30bba152c13caeb74787a75baf files/digest-giftcurs-0.5.7 66
+MD5 f642f424a729c298fd6fc01831b748f3 files/digest-giftcurs-0.6.2 66
