@@ -1,0 +1,1 @@
+MD5 9a34b924ea10ce0a1d62441ee2bacfff giFTcurs-0.6.2.tar.gz 455055
