@@ -1,6 +1,11 @@
 # ChangeLog for net-p2p/giftcurs
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/giftcurs/ChangeLog,v 1.22 2004/01/07 01:24:38 spider Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/giftcurs/ChangeLog,v 1.23 2004/02/11 21:38:13 mholzer Exp $
+
+*giftcurs-0.6.2 (11 Feb 2004)
+
+  11 Feb 2004; Martin Holzer <mholzer@gentoo.org> giftcurs-0.6.2.ebuild:
+  Version bumped. closes 38334
 
 *giftcurs-0.6.1-r1 (07 Jan 2004)
 
